--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "writeathon",
-  "displayName": "writeathon",
+  "name": "minimal-theme",
+  "displayName": "Minimal",
   "description": "A Nothing VSCode Theme",
   "version": "0.0.1",
   "engines": {
@@ -12,7 +12,7 @@
   "contributes": {
     "themes": [
       {
-        "label": "Writeathon",
+        "label": "Minimal",
         "uiTheme": "vs-dark",
         "path": "./themes/Writeathon-color-theme.json"
       }
